Fixed Body overflow in mobile screens

--- a/css/sample.css
+++ b/css/sample.css
@@ -175,6 +175,9 @@ svg {
 }
 
 @media screen and (max-width: 1050px) {
+  body {
+    overflow-x: hidden;
+  }
   .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -215,6 +218,9 @@ svg {
 }
 
 @media screen and (max-width: 700px) {
+  body {
+    overflow-x: hidden;
+  }
   .container {
     margin-bottom: 150vh;
   }
